--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -1,12 +1,10 @@
 page-start {
-    
-    #searchlist {
-        line-height: 1.3;
-        font-size: 16px;
-        width: 500px;
-        background-color: #eee;
-        padding: 10px;
-        
-    }
 
+  #searchList {
+    line-height: 1.3;
+    font-size: 16px;
+    width: 500px;
+    background-color: #eee;
+    padding: 10px;
+  }
 }
