--- a/src/pages/tasks/tasks.scss
+++ b/src/pages/tasks/tasks.scss
@@ -1,3 +1,11 @@
 page-tasks {
 
+  #slider-arrow{
+    float: right;
+  }
+
+  #task-title{
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
