--- a/src/pages/routing/routing.scss
+++ b/src/pages/routing/routing.scss
@@ -1,3 +1,11 @@
 page-routing {
 
+  #slider-arrow {
+    float: right;
+  }
+
+  #edit-button {
+    margin-left: 0.6rem;
+    margin-right: 0.6rem;
+  }
 }
